Fixed alignmrny issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,4 +3,5 @@
 // A4 sheet size
 .App {
   width: 595px;
+  display: flex;
 }
