--- a/src/layout/MainContent/MainContent.scss
+++ b/src/layout/MainContent/MainContent.scss
@@ -1,7 +1,8 @@
 @import '../../styles/variable';
 
 .main-contain {
+  display: inline-block;
+  width: 70%;
   background-color: $body-bg;
   color: $primary-color;
-  height: 100vh;
 }
